# jetson_robocon_2025

./: README.md
Full robot calculation/gui_calculation/: constants.py
gamepad_interface/include/gamepad_interface/: gamepad.hpp  mapper.hpp
gamepad_interface/src/: gamepad.cpp  gamepad_node.cpp  mapper.cpp
main_controller_pkg/: package.xml  setup.py
main_controller_pkg/main_controller_pkg/: basket_detect.py  capture_image_node.py  main_controller_node.py  plane_calculation_node.py  tf_publish_node.py
main_controller_pkg/main_controller_pkg/include/: basket_detect.py  distance_plane_detector.py
mcu_interface/include/mcu_interface/: MCU_Interface.hpp
mcu_interface/src/: MCU_Interface.cpp
odrive_interface/include/odrive_interface/: odrive_motor.hpp
odrive_interface/src/: can_comm.cpp  odrive_interface.cpp  odrive_motor.cpp
robot_bringup/launch/: complete_robot.launch.py
robot_bringup/rviz/: point_cloud.rviz
robot_interfaces/: CMakeLists.txt
robot_interfaces/srv/: RequestDistance.srv
